--- a/0.Programa/Makefile
+++ b/0.Programa/Makefile
@@ -15,4 +15,4 @@ open: clean
 	open $(PROJECT).pdf
 
 clean:
-	rm -f *.dvi *.log *.bak *.aux *.bbl *.blg *.idx *.ps *.eps *.pdf *.toc *.out *~	
+	rm -f *.dvi *.log *.bak *.aux *.bbl *.blg *.idx *.ps *.eps *.toc *.out *~	
